refactor: divide responsibility, use constant