@@ -9,6 +9,7 @@ public class RequestLine {
     private static final String QUERY_FLAG = "\\?";
     private static final String BLANK = " ";
     private static final String SLASH = "/";
+    private static final String UTF_8 = "UTF-8";
 
     private HttpMethod method;
     private String requestUrl;
@@ -25,7 +26,7 @@ public class RequestLine {
     public static RequestLine of(String requestLine) throws IOException {
         String[] token = requestLine.split(BLANK);
         HttpMethod method = HttpMethod.valueOf(token[0]);
-        String requestUrl = URLDecoder.decode(token[1], "UTF-8");
+        String requestUrl = URLDecoder.decode(token[1], UTF_8);
         String queryString = setQueryString(requestUrl);
         String httpVersion = token[2];
 
